--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Giuseppe Gambino
+name: joeg-ita
 
 # Short bio or description (displayed in the header)
-description: IT addicted
+description: developer and IT addicted
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/25502936?s=400&v=4
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: joeg-ita
   instagram:
-  linkedin: https://www.linkedin.com/in/giuseppe-gambino-525656179/
+  linkedin: giuseppe-gambino-525656179
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: gambinopeppe
